--- a/src/Magnum/Magnum.csproj
+++ b/src/Magnum/Magnum.csproj
@@ -473,6 +473,22 @@
     <Compile Include="Logging\TraceLogger.cs" />
     <Compile Include="Monads\CurryExpressionVisitor.cs" />
     <Compile Include="Monads\State.cs" />
+    <Compile Include="Serialization\Yaml\YamlSystemTypeSerializer.cs" />
+    <Compile Include="Serialization\Yaml\YamlPropertySerializer.cs" />
+    <Compile Include="Serialization\Yaml\YamlPropertyTypeSerializerCache.cs" />
+    <Compile Include="Serialization\Yaml\YamlObjectSerializer.cs" />
+    <Compile Include="Serialization\Yaml\YamlArraySerializer.cs" />
+    <Compile Include="Serialization\Yaml\YamlIDictionarySerializer.cs" />
+    <Compile Include="Serialization\Yaml\YamlIListSerializer.cs" />
+    <Compile Include="Serialization\Yaml\YamlListSerializer.cs" />
+    <Compile Include="Serialization\Yaml\YamlStringSerializer.cs" />
+    <Compile Include="Serialization\Yaml\YamlParser.cs" />
+    <Compile Include="Serialization\Yaml\YamlElementParser.cs" />
+    <Compile Include="Serialization\Yaml\YamlKeyElementParser.cs" />
+    <Compile Include="Serialization\Yaml\YamlDictionarySerializer.cs" />
+    <Compile Include="Serialization\Yaml\YamlTypeSerializerCache.cs" />
+    <Compile Include="Serialization\Yaml\YamlSerializer.cs" />
+    <Compile Include="Serialization\Yaml\YamlTypeSerializer.cs" />
     <Compile Include="Pipeline\Visitors\GraphPipelineVisitor.cs" />
     <Compile Include="Pipeline\Visitors\PipelineGraphData.cs" />
     <Compile Include="Reflection\ExtensionsToExpressions.cs" />
