--- a/src/Magnum.Specs/Magnum.Specs.csproj
+++ b/src/Magnum.Specs/Magnum.Specs.csproj
@@ -252,6 +252,7 @@
     <Compile Include="Serialization\SimpleType_Specs.cs" />
     <Compile Include="Serialization\FastSerializerObjects_Specs.cs" />
     <Compile Include="Serialization\SerializationApi_Specs.cs" />
+    <Compile Include="Serialization\YamlSerializerObject_Specs.cs" />
     <Compile Include="Servers\SocketServer_Specs.cs" />
     <Compile Include="Servers\HttpServer_Specs.cs" />
     <Compile Include="StateMachine\Anytime_Specs.cs" />
