--- a/src/Stact.Specs/Stact.Specs.csproj
+++ b/src/Stact.Specs/Stact.Specs.csproj
@@ -111,6 +111,7 @@
     <Compile Include="Actors\Auctions\Auction.cs" />
     <Compile Include="Actors\Auctions\Given_an_auction_actor_instance.cs" />
     <Compile Include="Actors\Calculator_Example.cs" />
+    <Compile Include="Actors\CleanUsing_Specs.cs" />
     <Compile Include="Channels\Channel_Specs.cs" />
     <Compile Include="Actors\PingPongDemo\Ping.cs" />
     <Compile Include="Actors\PingPongDemo\PingActor.cs" />
