--- a/src/Stact/Stact.csproj
+++ b/src/Stact/Stact.csproj
@@ -107,17 +107,17 @@
     <Compile Include="ActorInstance.cs" />
     <Compile Include="Actors\ActorCache.cs" />
     <Compile Include="Actors\ActorFactory.cs" />
-    <Compile Include="Actors\ActorFactoryConfigurator.cs" />
-    <Compile Include="Actors\ActorFactoryConfiguratorImpl.cs" />
+    <Compile Include="Actors\Configuration\ActorFactoryConfigurator.cs" />
+    <Compile Include="Actors\Configuration\ActorFactoryConfiguratorImpl.cs" />
     <Compile Include="Actors\ActorProvider.cs" />
     <Compile Include="Actors\ActorRegistry.cs" />
     <Compile Include="Actors\ActorRepository.cs" />
     <Compile Include="Actors\ExtensionsToActorInstance.cs" />
     <Compile Include="AnonymousActor.cs" />
-    <Compile Include="Actors\AnonymousActorFactory.cs" />
+    <Compile Include="Actors\Internal\AnonymousActorFactory.cs" />
     <Compile Include="Extensions.cs" />
     <Compile Include="Actors\Internal\ActorChannelProvider.cs" />
-    <Compile Include="Actors\Internal\DelegateActorFactory.cs" />
+    <Compile Include="Actors\Internal\ActorFactoryImpl.cs" />
     <Compile Include="Actors\Internal\ExitImpl.cs" />
     <Compile Include="Actors\Internal\KillImpl.cs" />
     <Compile Include="Actors\Internal\PendingReceiveImpl.cs" />
