--- a/src/Stact/Stact.csproj
+++ b/src/Stact/Stact.csproj
@@ -103,8 +103,8 @@
     <Compile Include="..\SolutionVersion.cs">
       <Link>SolutionVersion.cs</Link>
     </Compile>
-    <Compile Include="Actor.cs" />
-    <Compile Include="ActorInstance.cs" />
+    <Compile Include="Actors\Actor.cs" />
+    <Compile Include="Actors\ActorInstance.cs" />
     <Compile Include="Actors\ActorCache.cs" />
     <Compile Include="Actors\ActorFactory.cs" />
     <Compile Include="Actors\Configuration\ActorFactoryConfigurator.cs" />
@@ -113,7 +113,7 @@
     <Compile Include="Actors\ActorRegistry.cs" />
     <Compile Include="Actors\ActorRepository.cs" />
     <Compile Include="Actors\ExtensionsToActorInstance.cs" />
-    <Compile Include="AnonymousActor.cs" />
+    <Compile Include="Actors\AnonymousActor.cs" />
     <Compile Include="Actors\Internal\AnonymousActorFactory.cs" />
     <Compile Include="Channels\Configuration\ExtensionsForFiberConfiguration.cs" />
     <Compile Include="Extensions.cs" />
@@ -155,7 +155,7 @@
     <Compile Include="Actors\Internal\SentRequestImpl.cs" />
     <Compile Include="Channels\TypedChannelAdapter.cs" />
     <Compile Include="Actors\Internal\ActorInbox.cs" />
-    <Compile Include="Fibers\Configuration\FiberFactoryConfigurator.cs" />
+    <Compile Include="Configuration\Fibers\FiberFactoryConfigurator.cs" />
     <Compile Include="Channels\Configuration\Internal\InstanceChannelProviderConfiguratorImpl.cs" />
     <Compile Include="Channels\Configuration\Internal\SynchronizedChannelConnectionConfigurator.cs" />
     <Compile Include="Channels\Configuration\Internal\SynchronizedChannelConnectionConfiguratorImpl.cs" />
@@ -187,7 +187,7 @@
     <Compile Include="Channels\Configuration\ExtensionsForIntervalChannels.cs" />
     <Compile Include="Channels\Configuration\ExtensionsForSelectiveConsumerChannel.cs" />
     <Compile Include="Channels\Configuration\ExtensionsForAddConsumer.cs" />
-    <Compile Include="Fibers\Configuration\FiberFactoryConfiguratorImpl.cs" />
+    <Compile Include="Configuration\Fibers\FiberFactoryConfiguratorImpl.cs" />
     <Compile Include="Channels\Configuration\Internal\FilterChannelConfigurator.cs" />
     <Compile Include="Channels\Configuration\Internal\FilterChannelConfiguratorImpl.cs" />
     <Compile Include="Channels\Configuration\Internal\InstanceChannelConfiguratorImpl.cs" />
@@ -228,34 +228,35 @@
     <Compile Include="Actors\Inbox.cs" />
     <Compile Include="Channels\ShuntChannel.cs" />
     <Compile Include="Channels\Visitors\TraceChannelVisitor.cs" />
+    <Compile Include="Schedulers\ExtensionsToScheduler.cs" />
     <Compile Include="UntypedChannel.cs" />
     <Compile Include="Channels\Internal\WcfMessageEnvelope.cs" />
-    <Compile Include="Fibers\Configuration\FiberConfigurationException.cs" />
-    <Compile Include="Fibers\Configuration\FiberProviderConfigurator.cs" />
-    <Compile Include="Fibers\Configuration\FiberProviderConfiguratorImpl.cs" />
-    <Compile Include="Fibers\Internal\DisposeCallback.cs" />
+    <Compile Include="Configuration\Fibers\FiberConfigurationException.cs" />
+    <Compile Include="Configuration\Fibers\FiberProviderConfigurator.cs" />
+    <Compile Include="Configuration\Fibers\FiberProviderConfiguratorImpl.cs" />
+    <Compile Include="Internal\DisposeCallback.cs" />
     <Compile Include="Fibers\ExtensionsToFiber.cs" />
     <Compile Include="Fibers\Internal\KeyedFiberProvider.cs" />
     <Compile Include="Fibers\Fiber.cs" />
     <Compile Include="Fibers\FiberException.cs" />
     <Compile Include="Fibers\FiberProvider.cs" />
-    <Compile Include="Scheduler.cs" />
-    <Compile Include="Fibers\ScheduledOperation.cs" />
-    <Compile Include="Fibers\Internal\ScheduledOperationExecuter.cs" />
-    <Compile Include="Fibers\Internal\ScheduledOperationList.cs" />
-    <Compile Include="Fibers\Internal\ScheduledOperationExecuterImpl.cs" />
-    <Compile Include="Fibers\SchedulerFactory.cs" />
+    <Compile Include="Schedulers\Scheduler.cs" />
+    <Compile Include="Schedulers\ScheduledOperation.cs" />
+    <Compile Include="Schedulers\Internal\ScheduledOperationExecuter.cs" />
+    <Compile Include="Schedulers\Internal\ScheduledOperationList.cs" />
+    <Compile Include="Schedulers\Internal\ScheduledOperationExecuterImpl.cs" />
+    <Compile Include="Schedulers\SchedulerFactory.cs" />
     <Compile Include="Fibers\Internal\SynchronousFiber.cs" />
     <Compile Include="Fibers\Internal\SingleFiberProvider.cs" />
     <Compile Include="Fibers\Internal\ThreadFiber.cs" />
     <Compile Include="Fibers\Internal\PoolFiber.cs" />
-    <Compile Include="Fibers\Internal\TimerScheduler.cs" />
+    <Compile Include="Schedulers\Internal\TimerScheduler.cs" />
     <Compile Include="Fibers\FiberFactory.cs" />
     <Compile Include="Channels\AsyncResultChannel.cs" />
     <Compile Include="Channels\ChannelAccessor.cs" />
     <Compile Include="Channels\Visitors\ChannelVisitor.cs" />
     <Compile Include="Channels\ConsumerChannel.cs" />
-    <Compile Include="Channel.cs" />
+    <Compile Include="Channels\Channel.cs" />
     <Compile Include="Channels\Consumer.cs" />
     <Compile Include="Channels\ChannelProvider.cs" />
     <Compile Include="Channels\DelegateChannelProvider.cs" />
