--- a/src/Stact.ForNHibernate.Specs/Stact.ForNHibernate.Specs.csproj
+++ b/src/Stact.ForNHibernate.Specs/Stact.ForNHibernate.Specs.csproj
@@ -151,6 +151,7 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Channels\TestStateMachineInstance.cs" />
     <Compile Include="Channels\TestStateMachineInstanceBinding.cs" />
+    <Compile Include="Usage\NHibernateInstance_Usage.cs" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\Stact.Specs\Stact.Specs.csproj">
