--- a/src/Stact/Stact.csproj
+++ b/src/Stact/Stact.csproj
@@ -108,11 +108,14 @@
     <Compile Include="Actors\ActorInstance.cs" />
     <Compile Include="Actors\ActorCache.cs" />
     <Compile Include="Actors\ActorFactory.cs" />
+    <Compile Include="Actors\CacheActorRegistry.cs" />
     <Compile Include="Actors\Configuration\ActorFactoryConfigurator.cs" />
     <Compile Include="Actors\Configuration\ActorFactoryConfiguratorImpl.cs" />
     <Compile Include="Actors\ActorProvider.cs" />
     <Compile Include="Actors\ActorRegistry.cs" />
     <Compile Include="Actors\ActorRepository.cs" />
+    <Compile Include="Actors\Configuration\DefaultInitializeActorConvention.cs" />
+    <Compile Include="Actors\Configuration\InitializeActorConvention.cs" />
     <Compile Include="Actors\ExtensionsToActorInstance.cs" />
     <Compile Include="Actors\AnonymousActor.cs" />
     <Compile Include="Actors\Internal\AnonymousActorFactory.cs" />
