--- a/src/Stact.Specs/Stact.Specs.csproj
+++ b/src/Stact.Specs/Stact.Specs.csproj
@@ -143,6 +143,7 @@
     <Compile Include="Channels\ThreadPoolChannel_Specs.cs" />
     <Compile Include="Channels\UntypedChannelSubscription_Specs.cs" />
     <Compile Include="Channels\WcfSubscription_Specs.cs" />
+    <Compile Include="Headers\HeaderAdapter_Specs.cs" />
     <Compile Include="Headers\MessageHeader_Specs.cs" />
     <Compile Include="Model\Ask.cs" />
     <Compile Include="Model\Auction.cs" />
