Moved around conventions, added Message<T> upconverter

--- a/src/Stact/Stact.csproj
+++ b/src/Stact/Stact.csproj
@@ -109,16 +109,14 @@
     <Compile Include="Actors\ActorFactory.cs" />
     <Compile Include="Actors\CacheActorRegistry.cs" />
     <Compile Include="Actors\Configuration\ActorFactoryConfigurator.cs" />
-    <Compile Include="Actors\Configuration\ActorFactoryConfiguratorImpl.cs" />
+    <Compile Include="Actors\Configuration\Internal\ActorFactoryConfiguratorImpl.cs" />
     <Compile Include="Actors\ActorProvider.cs" />
     <Compile Include="Actors\ActorRegistry.cs" />
     <Compile Include="Actors\ActorRepository.cs" />
-    <Compile Include="Actors\Configuration\DefaultInitializeActorConvention.cs" />
-    <Compile Include="Actors\Configuration\InitializeActorConvention.cs" />
-    <Compile Include="Actors\PublicMessageMethodConvention.cs" />
-    <Compile Include="Actors\PropertyChannelConvention.cs" />
-    <Compile Include="Actors\PublicMessageMethodsConvention.cs" />
-    <Compile Include="Actors\PropertyChannelsConvention.cs" />
+    <Compile Include="Actors\Internal\PublicMethodConvention.cs" />
+    <Compile Include="Actors\Internal\PropertyChannelConvention.cs" />
+    <Compile Include="Actors\Internal\PublicMethodsConvention.cs" />
+    <Compile Include="Actors\Internal\PropertyChannelsConvention.cs" />
     <Compile Include="Actors\ExtensionsForActorConventions.cs" />
     <Compile Include="Actors\ExtensionsToActorInstance.cs" />
     <Compile Include="Actors\AnonymousActor.cs" />
@@ -131,6 +129,7 @@
     <Compile Include="Channels\Internal\HeaderTypeConverterFactory.cs" />
     <Compile Include="Channels\Internal\TypeConverters\MatchingTypeConverterFactory.cs" />
     <Compile Include="Channels\Internal\TypeConverters\MessageTypeConverterFactory.cs" />
+    <Compile Include="Channels\Internal\TypeConverters\MessageUpConverterFactory.cs" />
     <Compile Include="Configuration\Channels\ExtensionsForFiberConfiguration.cs" />
     <Compile Include="Configuration\Channels\Internal\SchedulerFactoryConfigurator.cs" />
     <Compile Include="Extensions.cs" />
