--- a/src/Stact/Stact.csproj
+++ b/src/Stact/Stact.csproj
@@ -109,6 +109,7 @@
     <Compile Include="Actors\ActorFactory.cs" />
     <Compile Include="Actors\CacheActorRegistry.cs" />
     <Compile Include="Actors\Configuration\ActorFactoryConfigurator.cs" />
+    <Compile Include="Actors\Configuration\Internal\ActorConventionSet.cs" />
     <Compile Include="Actors\Configuration\Internal\ActorFactoryConfiguratorImpl.cs" />
     <Compile Include="Actors\ActorProvider.cs" />
     <Compile Include="Actors\ActorRegistry.cs" />
@@ -130,6 +131,7 @@
     <Compile Include="Channels\Internal\TypeConverters\MatchingTypeConverterFactory.cs" />
     <Compile Include="Channels\Internal\TypeConverters\MessageTypeConverterFactory.cs" />
     <Compile Include="Channels\Internal\TypeConverters\MessageUpConverterFactory.cs" />
+    <Compile Include="Channels\Internal\TypeConverters\RequestUpConverterFactory.cs" />
     <Compile Include="Configuration\Channels\ExtensionsForFiberConfiguration.cs" />
     <Compile Include="Configuration\Channels\Internal\SchedulerFactoryConfigurator.cs" />
     <Compile Include="Extensions.cs" />
