--- a/src/Stact/Stact.csproj
+++ b/src/Stact/Stact.csproj
@@ -134,6 +134,7 @@
     <Compile Include="Channels\Internal\TypeConverters\RequestUpConverterFactory.cs" />
     <Compile Include="Configuration\Channels\ExtensionsForFiberConfiguration.cs" />
     <Compile Include="Configuration\Channels\Internal\SchedulerFactoryConfigurator.cs" />
+    <Compile Include="Continuation.cs" />
     <Compile Include="Extensions.cs" />
     <Compile Include="Actors\Internal\ActorChannelProvider.cs" />
     <Compile Include="Actors\Internal\ActorFactoryImpl.cs" />
@@ -248,6 +249,27 @@
     <Compile Include="Actors\Inbox.cs" />
     <Compile Include="Channels\ShuntChannel.cs" />
     <Compile Include="Channels\Visitors\TraceChannelVisitor.cs" />
+    <Compile Include="Routing\ConsumerNode.cs" />
+    <Compile Include="Routing\DynamicRoutingContext.cs" />
+    <Compile Include="Routing\Internal\JoinNode.2.cs" />
+    <Compile Include="Routing\Internal\RightActivation.cs" />
+    <Compile Include="Routing\JoinNodeLocator.cs" />
+    <Compile Include="Routing\ExtensionsToRoutingEngine.cs" />
+    <Compile Include="Routing\Internal\Activation.cs" />
+    <Compile Include="Routing\DynamicRoutingEngine.cs" />
+    <Compile Include="Routing\Internal\ActivationList.cs" />
+    <Compile Include="Routing\Internal\BetaMemory.cs" />
+    <Compile Include="Routing\Internal\ConstantNode.cs" />
+    <Compile Include="Routing\Internal\ExtensionsToList.cs" />
+    <Compile Include="Routing\Internal\JoinNode.cs" />
+    <Compile Include="Routing\Internal\MessageList.cs" />
+    <Compile Include="Routing\Internal\AlphaNode.cs" />
+    <Compile Include="Routing\Internal\ConditionNode.cs" />
+    <Compile Include="Routing\Internal\RoutingContext.cs" />
+    <Compile Include="Routing\Internal\TypeRouter.cs" />
+    <Compile Include="Routing\RoutingEngine.cs" />
+    <Compile Include="Routing\Visualizers\AbstractRoutingEngineVisitor.cs" />
+    <Compile Include="Routing\Visualizers\RoutingEngineTextVisualizer.cs" />
     <Compile Include="Schedulers\ExtensionsToScheduler.cs" />
     <Compile Include="Channels\UntypedChannel.cs" />
     <Compile Include="Channels\Internal\WcfMessageEnvelope.cs" />
