--- a/src/Stact.Benchmarks/Stact.Benchmarks.csproj
+++ b/src/Stact.Benchmarks/Stact.Benchmarks.csproj
@@ -70,6 +70,7 @@
     <Compile Include="MessagePassingBenchmark.cs" />
     <Compile Include="PingPongBenchmark.cs" />
     <Compile Include="Program.cs" />
+    <Compile Include="RoutingEngineBenchmark.cs" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\Stact\Stact.csproj">
